# ByteDMD-definition

./: README.md  TODO.md  bytedmd.py  bytedmd2.py  bytedmd_ir.py  bytedmd_strict.py  manual_matmul.py  pyproject.toml  test_bytedmd.py  test_bytedmd2.py  test_bytedmd_ir.py  test_gotchas.py  test_linalg.py  test_matmul_hierarchy.py  test_microgpt.py  tracing_methods.md
benchmarks/: README.md  attention_report.md  attention_results.json  benchmark_attention.py  benchmark_linalg.py  benchmark_microgpt.py
docs/: ceil_figure.py  generate_illustration.py  instruction_set.md  make_animated_gif.py  make_gif.py  manhattan-diamond.md  manhattan_figure.py  manhattan_function_figure.py  microgpt_figure.py  tracing_methods.md
experiments/: README.md  __init__.py
gemini/: README.md  SUMMARY.md  at2-lower-bounds.md  bill-dally-commute-math.md  bytedmd-instruction-list.md  bytedmd-naive-formulas.md  chatgpt-lower-bound.md  copy-spacedmd.md  copy_space_dmd_bound.md  efficient-strassen.md  fix-spacedmd-bug.md  fix-tiebreaker-spacedmd-bug.md  flash-attention-gc-vs-nogc.md  flops-are-a-lie.md  fractional-lp-splitting.md  infinite-graveyard.md  left-looking-lu.md  livedmd-not-a-bound.md  locality-measures.md  mathematica-matmul.md  matmul-complexity.md  matmul-explicit-formula.md  matmul-just-snake.md  matmul-optimal.md  matmul-regular-snake.md  mattson-trap.md  matvec+vecmat.md  matvec-exact-formula.md  mwis-bounds.md  noam-flash-attention.md  optimal-static-floor.md  optimize-stencil-time-diamond.md  optimize-tsqr.md  polyhedral-search-for-matmul.md  polymatroid-relaxation.md  (+16 more)
(+125 files in other folders)
